Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Fri Oct 14 23:09:02 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add ISODE_DEFS rule.

Tue Oct  4 22:06:15 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktfr_entry.c (krb5_kt_free_entry): Only try to free
		entry->key.contents if it is non-NULL.  If entry is NULL,
		return.

Thu Sep 29 23:19:06 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktbase.c (krb5_kt_resolve_name): If the prefix "FILE:" is not
		given, assume the default operations list (whcih is
		krb5_kt_dfl_ops).

