@@ -34,24 +34,23 @@
 
 #define KSUCCESS 0
 
+/*
+ * effects: If keyprocarg is not NULL, it is taken to be the name of a 
+ *	keytab.  Otherwise, the default keytab will be used.  This 
+ *	routine opens the keytab and finds the principal associated with
+ *	principal, vno, and keytype and returns the resulting key in *key 
+ *	or returning an error code if it is not	found. 
+ * returns: Either KSUCCESS or error code.
+ * errors: error code if not found or keyprocarg is invalid.
+ */
 krb5_error_code 
-krb5_kt_read_service_key(context, keyprocarg, principal, vno, key)
+krb5_kt_read_service_key(context, keyprocarg, principal, vno, keytype, key)
     krb5_context context;
     krb5_pointer keyprocarg;
     krb5_principal principal;
     krb5_kvno vno;
+    krb5_keytype keytype;
     krb5_keyblock ** key;
-/*
-	effects: If keyprocarg is not NULL, it is taken to be 
-		the name of a keytab.  Otherwise, the default
-		keytab will be used.  This routine opens the
-		keytab and finds the principal associated with
-		principal and vno, returning the resulting key
-		in *key or returning an error code if it is not
-		found. 
-	returns: nothing
-	errors: error code if not found
-*/
 {
     krb5_error_code kerror = KSUCCESS;
     char keytabname[MAX_KEYTAB_NAME_LEN + 1]; /* + 1 for NULL termination */
@@ -74,7 +73,7 @@ krb5_kt_read_service_key(context, keyprocarg, principal, vno, key)
     if (kerror = krb5_kt_resolve(context, (char *)keytabname, &id))
 	return (kerror);
 
-    kerror = krb5_kt_get_entry(context, id, principal, vno, &entry);
+    kerror = krb5_kt_get_entry(context, id, principal, vno, keytype, &entry);
     krb5_kt_close(context, id);
 
     if (kerror)
